# babyjubjub-ec

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
benches/: scalar_mult.rs
scripts/: gen_fiat.sh
src/: lib.rs
src/backend/: ct_curve.rs  ct_field.rs  mod.rs
src/backend/fiat/: bjjfr.rs  bn254fq.rs  mod.rs
tests/: coverage.rs  ct_backend_equivalence.rs  public_api.rs  serde.rs  serde_tests.rs
