[package]
name = "babyjubjub-ec"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation wrapped in elliptic-curve traits"
repository = "https://github.com/hoprnet/babyjubjub-ec"
readme = "README.md"

[dependencies]
# Use ark-babyjubjub as the backend implementation
# Note: taceo-ark-babyjubjub v0.5.3 depends on ark-ff 0.5.x, ark-ec 0.5.x, and ark-serialize 0.5.x
# We keep ark-* dependencies at 0.5 to match the backend crate's requirements
taceo-ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5.3" }
# ark-ff for field traits (needed for BackendScalar operations)
ark-ff = { version = "0.5", default-features = false }
# elliptic-curve traits
elliptic-curve = { version = "0.14.0-rc.32", default-features = false }
# group crate for core group traits
group = { version = "0.13", default-features = false, features = ["rand"] }
# Scalar field operations
ff = { version = "0.13", default-features = false }
# Subtle operations
subtle = { version = "2.6", default-features = false }
# Zeroize (optional - enables DefaultIsZeroes implementations)
zeroize = { version = "1.8", default-features = false, optional = true }
# Random number generation
rand_core = { version = "0.6", default-features = false }
# num-traits for Zero and One traits
num-traits = { version = "0.2", default-features = false }
# `default-features = false` so the dependency tree stays `no_std`-compatible
# (the previous `ark-ec = "0.5"` pulled in `std` unconditionally, which broke
# `--no-default-features` builds).
ark-ec = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

[features]
default = ["std"]
std = [
    "taceo-ark-babyjubjub/std",
    "elliptic-curve/std",
    "ff/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-serialize/std",
]
zeroize = ["dep:zeroize"]

[dev-dependencies]
rand = { version = "0.8", default-features = false }
criterion = { version = "0.8", default-features = false }
hex = "0.4"

[[bench]]
name = "scalar_mult"
harness = false

# Security patches
# Note: tracing-subscriber RUSTSEC-2025-0055 is a transitive dependency issue.
# The library itself doesn't use tracing. Consumers of this library should
# apply their own patch or use cargo-upgrade-exclude in their root crate.
